rf: Se refactoriza servicio para generar exel.
Se implementa servicio para generar pdf con html.
Se implementan dependencias.
Se ajusta la consulta a la BD en .env
Cambios en el commit:
	new file:   .gitignore
	new file:   backend/output/M9MEX_M9MEX-20260204-0001.pdf
	new file:   backend/output/M9MEX_M9MEX-20260204-0001.xlsx
	modified:   backend/package-lock.json
	modified:   backend/package.json
	modified:   backend/prisma/prisma.service.ts
	modified:   backend/src/excel/m9mex-excel.service.ts
	new file:   backend/src/m9mex/m9mex-pdf.service.ts
	modified:   backend/src/m9mex/m9mex.controller.ts
	modified:   backend/src/m9mex/m9mex.module.ts
	modified:   backend/src/m9mex/m9mex.service.ts
	new file:   backend/src/m9mex/templates/m9mex-html.ts
	new file:   mobile/.env
	modified:   mobile/src/config.ts
	modified:   package.json
	new file:   start-all.sh

--- a/package.json
+++ b/package.json
@@ -1,4 +1,9 @@
 {
+  "name": "cfe-root",
+  "version": "1.0.0",
+  "scripts": {
+    "start": "./start-all.sh"
+  },
   "dependencies": {
     "exceljs": "^4.4.0"
   }
