--- a/backend/package.json
+++ b/backend/package.json
@@ -28,8 +28,10 @@
     "@prisma/client": "^6.19.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.3",
+    "exceljs": "^4.4.0",
     "multer": "^2.0.2",
     "pdf-lib": "^1.17.1",
+    "puppeteer": "^24.36.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
   },
