rf: Se actualizan componentes del frontend con React Native Paper
Se actualiza la arquitectura de la App

Cambios en el commit:
	modified:   mobile/.env
	modified:   mobile/App.tsx
	modified:   mobile/package-lock.json
	modified:   mobile/package.json
	new file:   mobile/src/api/api.ts
	deleted:    mobile/src/components/Field.tsx
	deleted:    mobile/src/components/SelectField.tsx
	new file:   mobile/src/components/common/CustomDrawer.tsx
	new file:   mobile/src/components/common/Field.tsx
	new file:   mobile/src/components/common/SelectField.tsx
	new file:   mobile/src/components/service_records/MeterForm.tsx
	new file:   mobile/src/components/styles/common/StyleDataTables.tsx
	new file:   mobile/src/components/styles/common/StyleFeedback.tsx
	new file:   mobile/src/components/styles/common/StyleInteractive.tsx
	new file:   mobile/src/components/styles/common/StyleMotion.tsx
	new file:   mobile/src/components/styles/common/StyleMultimedia.tsx
	modified:   mobile/src/config.ts
	new file:   mobile/src/context/DrawerContext.tsx
	new file:   mobile/src/context/service_records/ServiceRecordsContext.tsx
	deleted:    mobile/src/screens/DetailScreen.tsx
	deleted:    mobile/src/screens/EditScreen.tsx
	deleted:    mobile/src/screens/ListScreens.tsx
	deleted:    mobile/src/screens/NewScreen.tsx
	new file:   mobile/src/screens/service_records/DetailScreen.tsx
	new file:   mobile/src/screens/service_records/EditScreen.tsx
	new file:   mobile/src/screens/service_records/ListScreens.tsx
	new file:   mobile/src/screens/service_records/NewScreen.tsx
	new file:   mobile/src/screens/styles/StylesScreen.tsx
	new file:   mobile/src/services/service_records/serviceRecordService.ts
	new file:   mobile/src/types.ts
	new file:   mobile/src/types/service_records/service_record.ts

--- a/mobile/.env
+++ b/mobile/.env
@@ -1,2 +1,2 @@
-# EXPO_PUBLIC_API_URL=http://localhost:3000
-EXPO_PUBLIC_API_URL=https://lite-llc-wool-protect.trycloudflare.com
+# EXPO_PUBLIC_API_URL=http://localhost:3006
+EXPO_PUBLIC_API_URL=https://must-taxi-sheriff-bias.trycloudflare.com
