--- a/backend/package.json
+++ b/backend/package.json
@@ -18,7 +18,8 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "import:servicios": "ts-node scripts/import-servicios-matamoros.ts"
   },
   "dependencies": {
     "@nestjs/common": "^11.0.1",
@@ -34,7 +35,8 @@
     "pdf-lib": "^1.17.1",
     "puppeteer": "^24.36.1",
     "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
