--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "start": "./start-all.sh"
   },
   "dependencies": {
-    "exceljs": "^4.4.0"
+    "exceljs": "^4.4.0",
+    "xlsx": "^0.18.5"
   }
 }
